# agenda-django

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
base_static/global/css/: style.css
base_templates/: base.html
base_templates/global/partials/: _head.html  _header.html
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_contact_picture_contact_show.py  0003_category_contact_category.py  0004_alter_category_options_alter_contact_options_and_more.py
contact/templates/contact/: contact.html  create.html  index.html  login.html  register.html
contact/templates/partials/: _user-form.html
contact/views/: contact_forms.py  contact_views.py  user_forms.py
project/: settings.py
