[tool.poetry]
name = "agenda-django"
version = "0.1.0"
description = ""
authors = ["Diego Alencar <diegoalencar.jacober@gmail.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
